--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "name": "fecs-git-hooks",
-    "version": "0.0.1",
+    "version": "0.0.1-beta.1",
     "description": "Fecs git pre-commit hook",
     "repository": {
         "type": "git",
         "url": "https://github.com/cxtom/fecs-git-hooks"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
         "fecs"
@@ -17,7 +20,10 @@
     "bugs": {
         "url": "https://github.com/cxtom/fecs-git-hooks/issues"
     },
+    "bin": {
+        "fecs-hook": "./bin/fecs-hook"
+    },
     "dependencies": {
-        "vinyl-fs": "^1.0.0"
+
     }
 }
