--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "keywords": [
         "fecs"
     ],
-    "author": "chenxiao <cxtom2010@gmail.com>",
+    "author": "cxtom <cxtom2010@gmail.com>",
     "license": "MIT",
     "engines": {
         "node": ">=0.10"
