--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fecs-git-hooks",
-    "version": "0.0.1-beta.11",
+    "version": "0.0.2",
     "description": "Fecs git pre-commit hook",
     "repository": {
         "type": "git",
