--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fecs-git-hooks",
-    "version": "0.0.6",
+    "version": "0.0.7-rc1",
     "description": "Fecs git pre-commit hook",
     "repository": {
         "type": "git",
